--- a/build.gradle
+++ b/build.gradle
@@ -7,18 +7,10 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-    maven {
-        name 'm2-dv8tion'
-        url 'https://m2.dv8tion.net/releases'
-    }
 }
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
-}
-
-tasks.withType(Test) {
-    jvmArgs '-Dfile.encoding=UTF-8'
 }
 
 task createProperties(dependsOn: processResources) {
@@ -42,7 +34,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:4.3.1'
     testImplementation 'org.hamcrest:hamcrest:2.2'
 
-    implementation 'net.dv8tion:JDA:4.4.0_350'
+    implementation 'net.dv8tion:JDA:5.0.0-alpha.12'
 
     implementation 'com.google.code.gson:gson:2.9.0'
     // https://mvnrepository.com/artifact/commons-io/commons-io
