Commands started working

--- a/src/main/resources/strings_core.properties
+++ b/src/main/resources/strings_core.properties
@@ -12,10 +12,10 @@ err.args.title = Неправильный синтаксис
 err.args.syntax = Синтаксис: `%s`\n\
   *Если ничего не понятно, пиши `%shelp %s`*
 err.insufficient_args = Слишком мало аргументов.
+err.invalid_arg = Неправильный аргумент №%d
 err.update_fail = Ошибка при обновлении наблюдателя
 err.not_implemented = Данная фича еще не реализована :tools:
 err.foreign_server = Эту команду (или с такими параметрами) нельзя выполнить с неизвестного сервера.
-err.invalid_arg = Неправильный аргумент №%d
 err.multiple = Произошло уже %s за %s %s
 err.multiple.hour = Произошло уже %s за %s %s %s
 err.ambiguous = Неоднозначный вызов.
@@ -37,5 +37,7 @@ plurals.minute.other = %d минут
 
 plurals.count.other = %d раз
 plurals.count.few = %d раза
+
+comms.ping.shortdesc = Задержка реакции бота
 
 comms.do.err.name = Неверное имя команды
