--- a/src/main/resources/strings_core.properties
+++ b/src/main/resources/strings_core.properties
@@ -21,7 +21,6 @@ err.multiple.hour = Произошло уже %s за %s %s %s
 err.ambiguous = Неоднозначный вызов.
 err.ambiguous.desc = Под этот вызов подходит несколько команд. Уточните выбор, вызвав ее явным именем:
 
-
 plurals.last.r.one = последнюю
 plurals.last.r.other = последние
 plurals.last.one = последний
@@ -39,5 +38,13 @@ plurals.count.other = %d раз
 plurals.count.few = %d раза
 
 comms.ping.shortdesc = Задержка реакции бота
+
+comms.help.shortdesc = Получить справку о команде
+comms.help.desc = Получить список команд (`help`), получить справку о команде (`help ping`), получить справку о нескольких командах (`help -f ping config`)
+comms.help.list.title = Список доступных команд
+comms.help.list.not_found = Следующие команды неизвестны, и не были найдены: `%s`
+comms.help.err.unknown_commands = Неизвестные команды
+comms.help.err.unknown_commands.desc = Ни одна из указанных команд не найдена. Невозможно получить справку о них
+comms.help.err.unknown_command = Невозможно найти справку по этой команде, т.к. ее не существует
 
 comms.do.err.name = Неверное имя команды
