Execution commands group DONE
НАКООДИЛ сука

--- a/src/main/resources/strings_core.properties
+++ b/src/main/resources/strings_core.properties
@@ -5,6 +5,7 @@ err.unknown_command.desc = Трижды проверь, что ты написа
   ( %s )
 err.unknown_perm = Я пока что не могу узнать, есть ли у тебя права на выполнение этой команды, когда ты пишешь мне в личку. Если они действительно есть, пиши мне на сервере!
 err.permission.title = Недостаточно прав
+err.permission.bot = Я не могу писать в этот канал. Проверьте мои права в нем.
 err.permission = У тебя нет прав на выполнение этой команды
 err.unexpected = Произошла ошибка :disappointed_relieved:
 err.unexpected.foot = *Расскажи об этом @ZONT_#9164, если проблема мешает работе*
@@ -15,6 +16,7 @@ err.insufficient_args = Слишком мало аргументов.
 err.invalid_arg = Неправильный аргумент №%d
 err.update_fail = Ошибка при обновлении наблюдателя
 err.not_implemented = Данная фича еще не реализована :tools:
+err.not_implemented.exact = Данная фича (%s) еще не реализована :tools:
 err.foreign_server = Эту команду (или с такими параметрами) нельзя выполнить с неизвестного сервера.
 err.multiple = Произошло уже %s за %s %s
 err.multiple.hour = Произошло уже %s за %s %s %s
