--- a/src/main/resources/strings_core.properties
+++ b/src/main/resources/strings_core.properties
@@ -17,7 +17,9 @@ err.invalid_arg = Неправильный аргумент №%d
 err.update_fail = Ошибка при обновлении наблюдателя
 err.not_implemented = Данная фича еще не реализована :tools:
 err.not_implemented.exact = Данная фича (%s) еще не реализована :tools:
-err.foreign_server = Эту команду (или с такими параметрами) нельзя выполнить с неизвестного сервера.
+err.foreign_guild = Эту команду (или с такими параметрами) нельзя выполнить с неизвестного сервера.
+err.guilds_banned = Эту команду (или с такими параметрами) нельзя выполнить с сервера.
+err.global_banned = Эту команду (или с такими параметрами) нельзя выполнить с личных сообщений.
 err.multiple = Произошло уже %s за %s %s
 err.multiple.hour = Произошло уже %s за %s %s %s
 err.ambiguous = Неоднозначный вызов.
